# iac-unmanaged

./: .gitignore  .yamllint.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
src/iac_index/: aws.py  error.py  resource.py
src/iac_index/internal/aws/: arn.py  client.py  error.py  indexer.py  resource_type.py
src/iac_unmanaged/: app.py  main.py
src/iac_unmanaged/command/: index.py
tests/: conftest.py  test_main.py
tests/iac_index/: test_arn.py  test_aws.py  test_resource.py  test_resource_type.py
tests/iac_unmanaged/: test_index.py
